fix overflow homepage

--- a/css/style.css
+++ b/css/style.css
@@ -638,7 +638,7 @@ body {
 
 /*media screen */
 
-@media only screen and (min-width:768px) {
+@media only screen and (min-width:769px) {
 	#home-logo {
 		height: 600px;
 		width: 100%;
@@ -656,7 +656,7 @@ body {
 		display: block;
 	}
 	.bottombox3r .text .text-concat, .bottombox4l .text .text-concat {
-		max-height: 12em; /* (Number of lines you want visible) * (line-height) */
+		max-height: 11.6em; /* (Number of lines you want visible) * (line-height) */
 		line-height: 1.2em;
 	}
 }
@@ -666,7 +666,7 @@ body {
 	#top-content .textbox .bottom {font-size: 12px;}
 	
 	.bottombox3r .text .text-concat, .bottombox4l .text .text-concat {
-		max-height: 12em; /* (Number of lines you want visible) * (line-height) */
+		max-height: 11.6em; /* (Number of lines you want visible) * (line-height) */
 		line-height: 1.2em;
 	}
 
